# antiraid-1

./: 800.json  asids.txt  chatb.txt  client.txt  comid.txt  comids.txt  config.json  device.json  main (copy) 1.py  main (copy) 2.py  main (copy).py  main.py  pyproject.toml  requirements.txt  sids.txt  tapcoin.py  users.json  youtube.txt
BotAmino/: Bot.py  BotAmino.py  extensions.py
Tam/l_amino/: client.py  socket.py  sub_client.py
Tam/l_amino/lib/util/: device.py  headers.py
amino/: client.py  socket.py  sub_client.py
amino/lib/util/: device.py  headers.py  helpers.py
local_amino/: client.py  socket.py  sub_client.py
local_amino/lib/util/: device.py  headers.py
utilities/amino_list/: ANIMEfamilia.json  AbsoluteWRLD.json  AmantesDelRol588.json  Amigos_amino7.json  BANGBANGBTSARMY.json  BTSCRAZYARMYS.json  CLASSOFLOVER389.json  ChummyAmino.json
