[tool.poetry]
name = "repl_python3_Rank-1-bot"
version = "0.1.0"
description = ""
authors = ["sharmaaa <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.3"
replit = "^3.2.4"
websocket = "^0.2.1"
bs4 = "^0.0.1"
Flask = "^2.0.3"
JSON_minify = "^0.3.0"
names = "^0.3.0"
aiohttp = "^3.8.1"
pymongo = "^4.0.2"
heroku3 = "^5.1.4"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
